# mcp_remote_postgres

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: args.py  db.py  main.py  mcp_server.py  utils.py
src/tools/: __init__.py  execute_query.py  get_table_schema.py  table_list.py
